--- a/index.html
+++ b/index.html
@@ -5,31 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aaa</title>
-    
 <style>
     html,body {
         height: 100%;
-        
     }
     #war {
         display: grid;
         height: 100%; 
-        grid-template-rows: 15% 75% 10%;
+        grid-template-rows: 13% 75% 12%;
         border: 1px solid black;
     }
-   
     #nav{
         display: grid;
-        width: 1165px;
-        height: 660px;
         grid-template-columns: 180px auto;
         border: 1px solid black;
         margin: 10px 45px 0px 45px;
         background-color: #ddd4d4;
     }
     #main{
-        width: 800px;
-        height: 470px;
+        width: 80%;
+        height: 90%;
         border: 1px solid black;
         text-align: center;
         margin:20px auto  20px auto;
@@ -63,7 +58,6 @@
       left: 35px;
       background-color: rgb(73, 51, 51);
    }
-   
 </style>
 </head>
 <body>
